[package]
name = "poke"
version = "0.1.0"
edition = "2024"

[dependencies]
fp2 = "0.3"
isogeny = { git = "https://github.com/GiacomoPope/isogeny_rs.git", rev = "c1681a0" }
ndarray = "0.16"
ndarray-rand = "0.15"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
rand = "0.9"
rand_core = "0.9"
sha3 = "0.10"

[dev-dependencies]
criterion = "0.7"
rstest = "0.26"
rstest_reuse = "0.7.0"
sha2 = "0.10"

[[bench]]
name = "poke_i"
harness = false

[[bench]]
name = "basis_reconstruction"
harness = false
