[package]
name = "poke"
version = "0.1.0"
edition = "2024"

[dependencies]
fp2 = "0.3"
isogeny = { path = "isogeny_rs" }
rand = "0.9"
rand_core = "0.9"
rug = "1.28.0"
sha3 = "0.10"

[dev-dependencies]
criterion = "0.7"
num-bigint = { version = "0.4" }
rstest = "0.26"
rstest_reuse = "0.7.0"
sha2 = "0.10"

[[bench]]
name = "poke"
harness = false

[[bench]]
name = "inke"
harness = false

[[bench]]
name = "basis_masking"
harness = false

[[bench]]
name = "dlp"
harness = false

[[bench]]
name = "backtracking_isogeny"
harness = false

[[bench]]
name = "basis_mapping_2d"
harness = false
